[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Menu/SettingsMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/UI.tres" type="Theme" id=2]

[node name="SettingsMenu" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0.784314 )
script = ExtResource( 1 )

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -60.0
margin_right = 75.0
margin_bottom = -30.0
rect_min_size = Vector2( 150, 30 )
text = "BACK"

[node name="VolumeControls" type="VBoxContainer" parent="."]
margin_left = 50.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicLabel" type="Label" parent="VolumeControls"]
margin_right = 200.0
margin_bottom = 19.0
text = "Music"

[node name="MusicVolume" type="HSlider" parent="VolumeControls"]
margin_top = 23.0
margin_right = 200.0
margin_bottom = 44.0
rect_min_size = Vector2( 200, 0 )
max_value = 1.0
step = 0.1

[node name="SoundLabel" type="Label" parent="VolumeControls"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 89.0
text = "
Sound"

[node name="SoundVolume" type="HSlider" parent="VolumeControls"]
margin_top = 93.0
margin_right = 200.0
margin_bottom = 114.0
max_value = 1.0
step = 0.1

[node name="FullCredits" type="Button" parent="."]
visible = false
margin_left = 445.0
margin_top = 350.0
margin_right = 544.0
margin_bottom = 370.0
text = "FULL CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Label" parent="."]
margin_left = 393.0
margin_top = 30.0
margin_right = 593.0
margin_bottom = 335.0
rect_min_size = Vector2( 200, 0 )
theme = ExtResource( 2 )
text = "Credits

Advent
by Jack Anderson

Additional CC0 Assets from:
opengameart.org
freesound.org
kenney.nl
unsplash.com
fonts.google.com

Powered by:
Godot"
align = 1
valign = 1

[node name="Disclaimer" type="Label" parent="."]
margin_left = 49.0
margin_top = 231.0
margin_right = 275.0
margin_bottom = 321.0
text = "This is a work of fiction. Any resemblance to actual events or persons, living or dead, is entirely coincidental."
align = 3
autowrap = true

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="VolumeControls/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="VolumeControls/SoundVolume" to="." method="_on_SoundVolume_value_changed"]
